[project]
name = "textual-reactive"
version = "0.1.0a2"
description = "React-like state management for Textual TUI framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "ierence" },
]
keywords = ["textual", "tui", "react", "state-management", "pydantic", "hooks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/ierence/textual-reactive"
Repository = "https://github.com/ierence/textual-reactive"
Issues = "https://github.com/ierence/textual-reactive/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

dependencies = [
    "textual>=0.50.0",
    "pydantic>=2.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["textual_reactive"]
